<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.supertramp.calculadorasaludable.MainActivity"
    android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/et_nombre"
                android:hint="@string/et_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/et_edad"
                android:hint="@string/et_edad"
                android:layout_width="match_parent"
                android:inputType="number"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/et_peso"
                android:hint="@string/et_peso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_sexo"
                android:gravity="center"
                android:textSize="15dp"
                />

            <RadioGroup
                android:id="@+id/radiogroupsex"
                android:layout_width="match_parent"

                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/sexo_hombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_hombre" />

                <RadioButton
                    android:id="@+id/sexo_mujer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_mujer" />
            </RadioGroup>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_af"
                android:gravity="center"
                android:textSize="15dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioGroup
                android:id="@+id/radiogroupaf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/baja"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_baja" />

                <RadioButton
                    android:id="@+id/media"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_equilibrada" />

                <RadioButton
                    android:id="@+id/alta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_alta" />

            </RadioGroup>

            <EditText
                android:id="@+id/et_altura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/et_altura" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/boton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="OK!"
                />

        </LinearLayout>

</ScrollView>
